# ai-run-demo-agents

./: .gitignore  README.md
js/teams-codemie-agent/: .env.sample  package-lock.json  package.json
js/teams-codemie-agent/appPackage/: manifest.json
js/teams-codemie-agent/src/: index.ts
js/teams-codemie-agent/src/bot/: bot.ts
js/teams-codemie-agent/src/config/: env.ts
js/teams-codemie-agent/src/data/: assistants.sample.ts
js/teams-codemie-agent/src/interfaces/: types.ts
js/teams-codemie-agent/src/services/: assistants.service.ts  codemie-api-client.ts
python/: README.md  pyproject.toml
python/agents/currency_converter/: .env  Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py  test_client.py
python/agents/financial-agent/: Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py  test_client.py
python/agents/fun-with-rick/: Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py  test_client.py
python/agents/research-agent/: Dockerfile  README.md  __main__.py  agent.py  pyproject.toml  task_manager.py  test_client.py
python/common/utils/: chat_model_factory.py
