[project]
name = "ai-run-demo-agents"
version = "0.1.0"
description = "Agent2Agent samples for CodeMie"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.2.14",
    "langgraph>=0.4.1",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "pyngrok>=7.2.8",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "hosts"]

[tool.uv.workspace]
members = [
    "agents/fun-with-rick",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
