[project]
name = "financial-agent"
version = "0.1.0"
description = "Sample Agent for CodeMie with A2A Protocol that helps to search and analyze financial market data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-run-demo-agents",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.2.14",
    "langgraph>=0.3.18",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
    "pyngrok>=5.1.0",
    "a2a-sdk>=0.2.1a1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
ai-run-demo-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
