[project]
name = "research-agent"
version = "0.1.0"
description = "AI-powered research agent using LangGraph"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.15",
    "langchain-openai>=0.0.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
ai-run-demo-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"