[project]
name = "research-agent"
version = "0.1.0"
description = "AI-powered research agent using LangGraph"
requires-python = ">=3.13"
dependencies = [
    "ai-run-demo-agents",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.2.14",
    "langgraph>=0.3.18",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "pyngrok>=5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
ai-run-demo-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
